--- a/helloexpress/views/menu.html
+++ b/helloexpress/views/menu.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script>var jsonarray = JSON.parse('!{menudata}').menudata;for (i =0;i<jsonarray.length;i++)
-{var item = jsonarray[i];var startdate = new Date(item.startdate*1000);var enddate = new Date(item.enddate*1000);document.write("<p><a href=/orders/placeorder?menuid="+item._id+">"+item.name+ "<br />有效期:" + startdate.toLocaleDateString() + ' -- ' + enddate.toLocaleDateString() + "<br />价格:" +  item.price +"</a></p><br />" )
+{var item = jsonarray[i];var startdate = new Date(item.startdate*1000);var enddate = new Date(item.enddate*1000);document.write("<form name='form"+item._id+"' action='/orders/placeorder' method='post'><a href=javascript:document.form"+item._id+".submit();><input type='hidden' id='menuid' name='menuid' value='"+item._id+"'/>"+item.name+ "<br />有效期:" + startdate.toLocaleDateString() + " -- " + enddate.toLocaleDateString() + "<br />价格:" +  item.price +"</a></form><br />" )
 }</script>
 
 <p><a href="/users/logout">登出</a></p>
