--- a/helloexpress/views/orderlist.html
+++ b/helloexpress/views/orderlist.html
@@ -3,11 +3,7 @@
 <head><title>我的订单</title><link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <body>
-<h1>来点餐啦</h1>
-<form action="/users/login" method="post"><p><span>name:</span><input id="name" name="name" type="text"/></p><p><span>password:</span>
-<input id="password" name="password" type="password"/>
-</p>
-<p><input type="submit" value="登录"> <a href="regist.html">注册</a></p>
-</form>
+<h1>这是你的订单哈</h1>
+
 </body>
 </html>
