--- a/helloexpress/views/menu.html
+++ b/helloexpress/views/menu.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <title>菜单</title>
-<head><script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<head>
 </head>
 <body>
 <script>var jsonarray = JSON.parse('!{menudata}').menudata;for (i =0;i<jsonarray.length;i++)
-{var item = jsonarray[i];var startdate = new Date(item.startdate*1000);var enddate = new Date(item.enddate*1000);document.write("<form name='form"+item._id+"' action='/orders/placeorder' method='post'><a href=javascript:document.form"+item._id+".submit();><input type='hidden' id='menuid' name='menuid' value='"+item._id+"'/>"+item.name+ "<br />有效期:" + startdate.toLocaleDateString() + " -- " + enddate.toLocaleDateString() + "<br />价格:" +  item.price +"</a></form><br />" )
+{var item = jsonarray[i];var startdate = new Date(item.startdate);var enddate = new Date(item.enddate);document.write("<form name='form"+item._id+"' action='/orders/placeorder' method='post'><a href=javascript:document.form"+item._id+".submit();><input type='hidden' id='menuid' name='menuid' value='"+item._id+"'/>"+item.name+ "<br />有效期:" + startdate.toLocaleDateString() + " -- " + enddate.toLocaleDateString() + "<br />价格:" +  item.price +"</a></form><br />" )
 }</script>
 
 <p><a href="/users/logout">登出</a></p>
-<p><a href="/menus/loadmenu">上菜</a></p>
+<p><a href="/orders/orderlist">历史订单</a></p>
 </body>
 </html>
 
